# cookunity-shared-cart

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  compose.yaml  pyproject.toml  scrape.py  serve.py  swarm.yaml
.github/workflows/: docker.yml
cookunity/: __init__.py  cli.py  curl_paste.py  dates.py  env.py  handler.py  proxy.py  render.py  state.py
cookunity/assets/: page.css  page.js
tests/: conftest.py  test_curl_paste.py  test_dates.py  test_env.py  test_handler.py  test_proxy.py  test_render.py  test_state.py
